# mockalot

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: _config.yml  index.md
docs/generators/: index.md
docs/generators/address/: city.md  country.md  index.md
docs/generators/general/: index.md  pick_from_list.md  uuid.md
docs/generators/internet/: email.md  index.md
docs/generators/number/: float.md  index.md  integer.md  sequence.md
docs/generators/person/: index.md  name.md  phone_number.md
docs/generators/time/: date.md  index.md
docs/writers/: index.md
docs/writers/file/: csv.md  index.md  json.md  parquet.md
docs/writers/inmemory/: index.md  pandas_dataframe.md  pyspark_dataframe.md  python_list.md
examples/: README.md  orders.py
mockalot/: __init__.py  config.py  exceptions.py  log.py
mockalot/generators/: __init__.py  address.py  general.py  number.py  person.py  string.py
mockalot/writers/: __init__.py  _base.py  binary_files.py  in_memory.py  json_file.py  text_files.py
sampy/: __init__.py  config.py  exceptions.py  generators.py  writers.py
sampy/generators/: _base.py  generic.py  internet.py  time.py
sampy/writers/: csv_file.py
tests/: test_mockalot.py  test_sampy.py
tests/generators/: test_base_generator.py  test_city_generator.py  test_country_generator.py  test_date_generator.py  test_email_generator.py  test_float_generator.py  test_integer_generator.py  test_name_generator.py  test_phone_number_generator.py  test_pick_from_list_generator.py  test_sequence_generator.py  test_uuid_generator.py
tests/generators/address/: test_city_generator.py  (+1 more)
tests/writers/: test_base_writer.py  test_csv_writer.py  test_json_writer.py
(+17 files in other folders)
