[tool.poetry]
name = "sampy"
version = "0.1.0"
description = "Sample data generator library."
authors = ["Flávio Teixeira <flavio.mtps@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
