[tool.poetry]
name = "sampy"
version = "0.2.0"
description = "Sample data generator library."
authors = ["Flávio Teixeira <flavio.mtps@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^24.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
